tests/baselines/reference/emitClassExpressionInDeclarationFile.errors.txt
tests/cases/compiler/emitClassExpressionInDeclarationFile.ts(5,12): error TS4025: Exported variable 'circularReference' has or is using private name 'C'.


==== tests/cases/compiler/emitClassExpressionInDeclarationFile.ts (1 errors) ====
    export var simpleExample = class {
        static getTags() { }
        tags() { }
    }
    export var circularReference = class C {
               ~~~~~~~~~~~~~~~~~
!!! error TS4025: Exported variable 'circularReference' has or is using private name 'C'.
        static getTags(c: C): C { return c }
        tags(c: C): C { return c }
    }
    
    // repro from #15066
    export class FooItem {
        foo(): void { }
        name?: string;
    }
    
    export type Constructor<T> = new(...args: any[]) => T;
    export function WithTags<T extends Constructor<FooItem>>(Base: T) {
        return class extends Base {
            static getTags(): void { }
            tags(): void { }
        }
    }
    
    export class Test extends WithTags(FooItem) {}
    
    const test = new Test();
    
    Test.getTags()
    test.tags();
    